# seo-log-auditor

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.streamlit/: config.toml
src/seo_log_auditor/: __init__.py  app.py  classify.py  cli.py  parsers.py  sitemap.py  ui_state.py  verify_bot.py
src/seo_log_auditor/analysis/: __init__.py  budget.py  frequency.py  masquerade.py  orphans.py  param_traps.py  performance.py  status_waste.py
src/seo_log_auditor/config/: page_patterns.example.yaml
src/seo_log_auditor/pages/: 1_Crawl_Budget.py  2_Orphan_Pages.py  3_Status_Waste.py  4_Stale_Pages.py  5_Performance.py  6_Bot_Verification.py  7_Parameter_Traps.py
tests/: test_budget.py  test_classify.py  test_param_traps.py  test_parsers.py  test_sitemap.py  test_status_waste.py
tests/fixtures/: sample_loki.json
