[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seo-log-auditor"
version = "0.1.2"
description = "SEO crawl-audit Streamlit dashboard for nginx-ingress Googlebot logs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Hiten Sangani", email = "66553002+hitensangani@users.noreply.github.com" },
]
keywords = ["seo", "crawl", "googlebot", "logs", "nginx", "streamlit", "loki"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Log Analysis",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "streamlit>=1.30",
    "pandas>=2.0",
    "plotly>=5.18",
    "requests>=2.31",
    "PyYAML>=6.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
seo-log-auditor = "seo_log_auditor.cli:main"

[project.urls]
Homepage = "https://github.com/hitensangani/seo-log-auditor"
Repository = "https://github.com/hitensangani/seo-log-auditor"
Issues = "https://github.com/hitensangani/seo-log-auditor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/seo_log_auditor"]

[tool.hatch.build.targets.sdist]
include = [
    "src/seo_log_auditor",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
